--- a/platillos.html
+++ b/platillos.html
@@ -24,7 +24,7 @@
     <div class="fondoPrincipal">
       <header>
         <div class="cHeader">
-          <a href="../html/index.html"
+          <a href="index.html"
             ><img class="imgLogo" src="logoSB.png" alt="Logo"
           /></a>
           <h1 class="tituloH">Comidas Caribeñas El Buen Sabor</h1>
