--- a/galeria.html
+++ b/galeria.html
@@ -129,7 +129,7 @@
 
                   <img
                     title="Da click para agrandar la imagen"
-                    src="InstalacionesLocal.jpeg"
+                    src="instalacionesLocal.jpeg"
                     class="w-100 shadow-1-strong rounded mb-4 img"
                     onclick="openImage(this.src)"
                   />
